[gd_scene load_steps=28 format=3 uid="uid://dkww1pexib2bu"]

[ext_resource type="Script" uid="uid://b51cp3ls0c4xq" path="res://Scripts/GameControl.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://bpn4j5n7qq6yk" path="res://Scenes/player.tscn" id="2_jjvhh"]
[ext_resource type="PackedScene" uid="uid://cpk5vgxtqauii" path="res://Scenes/slash.tscn" id="2_jkdf5"]
[ext_resource type="PackedScene" uid="uid://y7i1s05oys7a" path="res://Scenes/reward_map.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://duw4nsqo4y87t" path="res://Scenes/bullet.tscn" id="3_wsu2k"]
[ext_resource type="SpriteFrames" uid="uid://c1pk0hy608sqi" path="res://Animations/runes/rune2.tres" id="5_3pmx8"]
[ext_resource type="SpriteFrames" uid="uid://esvqf8p34k6o" path="res://Animations/runes/rune1.tres" id="6_hibaj"]
[ext_resource type="SpriteFrames" uid="uid://bhn6lrs2ajlph" path="res://Animations/runes/rune3.tres" id="6_u50mg"]
[ext_resource type="PackedScene" uid="uid://b3hq1jqq5dldw" path="res://Scenes/map.tscn" id="7_h1bgf"]
[ext_resource type="Script" uid="uid://b8t4t7cmyhrjn" path="res://Scripts/Rewards/PearlGreen.gd" id="10_h1bgf"]
[ext_resource type="Script" uid="uid://sdukrd3e0r0m" path="res://Scripts/Rewards/ConchGreen.gd" id="11_b3802"]
[ext_resource type="Script" uid="uid://cmsdvcmuhmtq" path="res://Scripts/Rewards/SpikeGreen.gd" id="12_fevyy"]
[ext_resource type="PackedScene" uid="uid://54hqsva7183s" path="res://Scenes/ui.tscn" id="12_h1bgf"]
[ext_resource type="Script" uid="uid://0lc53uw4ww4x" path="res://Scripts/Rewards/SpikeOrange.gd" id="13_hibaj"]
[ext_resource type="Script" uid="uid://lwmjlihr65hq" path="res://Scripts/Rewards/SpikePurple.gd" id="14_pdsj5"]
[ext_resource type="Script" uid="uid://drl3td1cdtgii" path="res://Scripts/Rewards/ShellGreen.gd" id="15_ee4r6"]
[ext_resource type="Script" uid="uid://dwkim0538ov81" path="res://Scripts/Rewards/ShellOrange.gd" id="16_gt3je"]
[ext_resource type="Script" uid="uid://okwgyim5omf6" path="res://Scripts/Rewards/ShellPurple.gd" id="17_3pmx8"]
[ext_resource type="Script" uid="uid://c76j1wku3nq33" path="res://Scenes/SoundEffects.gd" id="17_pdsj5"]
[ext_resource type="Script" uid="uid://bb83gttsfoeni" path="res://Scripts/Rewards/ConchOrange.gd" id="18_3pmx8"]
[ext_resource type="AudioStream" uid="uid://jl0n66byrhny" path="res://Music/rainWater.mp3" id="19_fevyy"]
[ext_resource type="Script" uid="uid://dotr4axcdg2fy" path="res://Scripts/Rewards/ConchPurple.gd" id="19_u50mg"]
[ext_resource type="Script" uid="uid://cb4ecp6wlcw5u" path="res://Scripts/Rewards/PearlOrange.gd" id="20_cbgmd"]
[ext_resource type="Script" uid="uid://5glcwumhn66r" path="res://Scenes/audio_stream_player.gd" id="20_gt3je"]
[ext_resource type="Script" uid="uid://ncdy2vb7elfj" path="res://Scripts/Rewards/PearlPurple.gd" id="21_1w6v2"]
[ext_resource type="AudioStream" uid="uid://on6usov0it30" path="res://Music/wavyBells.mp3" id="21_3pmx8"]

[sub_resource type="Environment" id="Environment_ynf5e"]
background_mode = 3
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 8.4
glow_enabled = true
glow_intensity = 0.3
glow_bloom = 0.2
fog_enabled = true

[node name="GameControl" type="Node2D"]
script = ExtResource("1_sugp2")
slash = ExtResource("2_jkdf5")
bullet = ExtResource("3_wsu2k")
rune_anims = Array[SpriteFrames]([ExtResource("6_hibaj"), ExtResource("5_3pmx8"), ExtResource("6_u50mg")])

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0.7392879, 0.73928833, 0.7392881, 1)

[node name="Map" parent="." instance=ExtResource("7_h1bgf")]

[node name="Player" parent="." instance=ExtResource("2_jjvhh")]
y_sort_enabled = true
position = Vector2(-714, 432)
starting_position = Vector2(-714, 432)

[node name="RewardMap" parent="." instance=ExtResource("2_kry3j")]
light_mask = 2
position = Vector2(-3010, 2417)
rewards = Array[Script]([ExtResource("10_h1bgf"), ExtResource("11_b3802"), ExtResource("12_fevyy"), ExtResource("13_hibaj"), ExtResource("14_pdsj5"), ExtResource("15_ee4r6"), ExtResource("16_gt3je"), ExtResource("17_3pmx8"), ExtResource("11_b3802"), ExtResource("18_3pmx8"), ExtResource("19_u50mg"), ExtResource("10_h1bgf"), ExtResource("20_cbgmd"), ExtResource("21_1w6v2")])

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
light_mask = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2219443, 0.5862816, 0.80328625, 1)

[node name="Darkness" type="CanvasModulate" parent="Background"]
color = Color(0.7392879, 0.73928833, 0.7392881, 1)

[node name="UI" parent="." instance=ExtResource("12_h1bgf")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ynf5e")

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -21.0
script = ExtResource("17_pdsj5")
metadata/_custom_type_script = "uid://c76j1wku3nq33"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_fevyy")
volume_db = -21.767
autoplay = true
script = ExtResource("20_gt3je")
rainwater_music = ExtResource("19_fevyy")
bells_music = ExtResource("21_3pmx8")
